--- a/Style3.css
+++ b/Style3.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 header {
     margin: 30px;
 }
 
 main {
     padding: 10px;
-    background-color: black;
+    background-color: purple;
 }
 .post {
-    background-color: white;
+    background-color: orange;
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -15,28 +17,32 @@ main {
     height:250px;
     width: 47%;
     float:left;
+    font-family: 'Pacifico';
+    font-weight: 100;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
 }
 .post img {
     margin: 5px;
 }
 body {
-   background-color: black;
+   background-color: purple;
 }
 
 
 
 footer {
-    background-color: black;
+    background-color: purple;
     float: left;
 }
 
 .post9 {
-    background-color: white;
+    background-color: orange;
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
     display: flex;
-    color: redn;
+    color: red;
 }
 .post9 img {
     margin: 20px;
